# MAL-Organizer

./: Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
mal_organizer/: __init__.py  __main__.py  cli.py  client.py  config.py  consts.py  logs.py  utils.py
tests/: test_anime_list.json  test_app.py
